--- a/TravelOrganizationWebApp.New/Pages/Shared/_LoginPartial.cshtml
+++ b/TravelOrganizationWebApp.New/Pages/Shared/_LoginPartial.cshtml
@@ -5,13 +5,13 @@
 @if (AuthService.IsAuthenticated())
 {
     <li class="nav-item mx-2">
-        <a class="nav-link text-dark" asp-page="/Account/Profile" title="Profile">
+        <a class="nav-link text-white" asp-page="/Account/Profile" title="Profile">
             <i class="fas fa-user-circle me-1"></i>
             <span>Profile</span>
         </a>
     </li>
     <li class="nav-item mx-2">
-        <a class="nav-link text-dark" asp-page="/Account/ChangePassword" title="Change Password">
+        <a class="nav-link text-white" asp-page="/Account/ChangePassword" title="Change Password">
             <i class="fas fa-key me-1"></i>
             <span>Change Password</span>
         </a>
@@ -19,14 +19,14 @@
     @if (AuthService.IsAdmin())
     {
         <li class="nav-item mx-2">
-            <a class="nav-link text-dark" asp-page="/Admin/Index" title="Admin">
+            <a class="nav-link text-white" asp-page="/Admin/Index" title="Admin">
                 <i class="fas fa-cog me-1"></i>
                 <span>Admin</span>
             </a>
         </li>
     }
     <li class="nav-item mx-2">
-        <a class="nav-link text-dark" asp-page="/Account/Logout" title="Logout">
+        <a class="nav-link text-white" asp-page="/Account/Logout" title="Logout">
             <i class="fas fa-sign-out-alt me-1"></i>
             <span>Logout</span>
         </a>
@@ -35,13 +35,13 @@
 else
 {
     <li class="nav-item mx-2">
-        <a class="nav-link text-dark" asp-page="/Account/Register" title="Register">
+        <a class="nav-link text-white" asp-page="/Account/Register" title="Register">
             <i class="fas fa-user-plus me-1"></i>
             <span>Register</span>
         </a>
     </li>
     <li class="nav-item mx-2">
-        <a class="nav-link text-dark" asp-page="/Account/Login" title="Login">
+        <a class="nav-link text-white" asp-page="/Account/Login" title="Login">
             <i class="fas fa-sign-in-alt me-1"></i>
             <span>Login</span>
         </a>
