--- a/TravelOrganizationWebApp.New/Pages/Shared/_Layout.cshtml
+++ b/TravelOrganizationWebApp.New/Pages/Shared/_Layout.cshtml
@@ -23,11 +23,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="~/">
-                    <i class="fas fa-globe-americas me-2"></i>Travel System
-                </a>
+                <a class="navbar-brand text-white" asp-area="" asp-page="/Index">Travel System</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,38 +33,37 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Trips/Index">Trips</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Destinations/Index">Destinations</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Destinations/Index">Destinations</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Trips/Index">Trips</a>
                         </li>
                         @if (User.Identity?.IsAuthenticated == true)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/MyBookings/Index">My Bookings</a>
+                                <a class="nav-link text-white" asp-area="" asp-page="/Trips/MyBookings">My Bookings</a>
                             </li>
-                            @if (User.IsInRole("Admin"))
-                            {
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-dark" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Admin
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="adminDropdown">
-                                        <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Trips/Index">Manage Trips</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Destinations/Index">Manage Destinations</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Guides/Index">Manage Guides</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Bookings/Index">Manage Bookings</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Manage Users</a></li>
-                                    </ul>
-                                </li>
-                            }
                         }
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Admin
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Destinations/Index">Manage Destinations</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Trips/Index">Manage Trips</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Guides/Index">Manage Guides</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Bookings/Index">Manage Bookings</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Manage Users</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Logs/Index">System Logs</a></li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
