--- a/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
@@ -23,14 +23,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-lg navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand text-white" asp-area="" asp-page="/Index">Travel System</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-lg-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
@@ -78,7 +78,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Travel Organization System - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 RWA - Travel Organization System - By: Matija Sokol <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
